# gps_tracker

./: .dockerignore  .env.example  Cargo.toml  Dockerfile
migration/: Cargo.toml
migration/src/: m20260316_000001_create_devices_table.rs  main.rs  migrator.rs
src/: app.rs  main.rs
src/entities/: device.rs
src/middleware/: mod.rs
src/modules/: mod.rs
src/modules/v1/: mod.rs
src/modules/v1/tag/: mod.rs
src/modules/v1/tag/domain/entities/: device.rs
src/modules/v1/tag/interface/: auth.rs  mod.rs  tracking.rs
src/modules/v1/tag/service/: auth.rs  mod.rs  tracking.rs
